--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
-
 body {
-    background-color: #001f3f; /* Deep Blue */
+    background-color: #0e0e0e; /* Darker background */
     font-family: 'Arial', sans-serif;
     padding: 10px;
     color: #fff; /* White text */
@@ -22,8 +21,6 @@ body {
     display: none;
 }
 
-
-
 button:hover {
     opacity: 0.8;
 }
@@ -35,9 +32,10 @@ table {
 }
 
 th {
-    background-color: #004080;
+    background-color: #001f3f; /* Dark Blue */
     height:5vh;
 }
+
 td {
     border: 1px solid #00264d; /* Darker Blue Border */
     padding: 8px;
@@ -46,23 +44,20 @@ td {
 
 /* Alternate row colors */
 tr:nth-child(even) {
-    background-color: #004080; /* Darker Blue Shade */
+    background-color: #001f3f; /* Dark Blue */
 }
 
 tr:nth-child(odd) {
-    background-color: #001a33; /* Regular Dark Blue */
+    background-color: #00264d; /* Darker Blue */
 }
-
-
 
 #chart {
     width: 100%;
     height: 400px;
 }
 
-
 button {
-    background-color:blue;
+    background-color: #007bff; /* Light blue */
     border: none;
     color: #fff;
     text-align: center;
